--- a/Voila/css/main.css
+++ b/Voila/css/main.css
@@ -116,6 +116,12 @@
   .btn {
     margin: 0 auto;
   }
+  .about__content {
+    margin-top: 30px !important;
+  }
+  .about__img {
+    text-align: center;
+  }
 }
 @media screen and (max-width: 995px) {
   .about__img {
@@ -132,16 +138,6 @@
   }
 }
 @media screen and (max-width: 1310px) {
-  .about__img {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
   .about__img img {
     max-width: 100%;
     height: auto;
@@ -225,7 +221,7 @@ a:hover {
   background: rgba(0, 0, 0, 0.75);
 }
 .block {
-  height: 601px;
+  height: 671px;
   padding-left: 10px;
   padding-right: 10px;
   display: -webkit-box;
